--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {padding-bottom: 40px;color: #5a5a5a;}
 
     /* Carousel base class */
     .carousel {
-      margin-bottom: 60px;
+      /* margin-bottom: 60px; */
     }
 
     .carousel .container {
@@ -88,15 +88,15 @@ body {padding-bottom: 40px;color: #5a5a5a;}
     }
 
     .carousel .item {
-      height: 400px !important;
-	  margin-top:40px;
+      height: 500px !important;
+	  margin-top:20px;
     }
     .carousel img {
       position: absolute;
       top: 0;
       left: 0;
       min-width: 100%;
-      height: 400px!important;
+     /*  height: 500px!important; */
     }
 
     .carousel-caption {
