--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 /*
 Theme Name: ItalyStrap
-Theme URI: 
+Theme URI: http://www.overclokk.net/italystrap-wordpress-starter-theme
 Author: Enea Overclokk
 Author URI: http://www.overclokk.net
-Description: 
-Version: 1.0
-License: GNU General Public License v2 or later
+Template: ItalyStrap
+Description: Wordpess starter theme with twitter bootstrap, HTML5 boilerplate and Schema.org
+Version: 1.2
+License: MIT License (MIT)
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: dark, light, white, black, gray, one-column, two-columns, left-sidebar, right-sidebar, fixed-width, flexible-width, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-image-header, featured-images, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready
+Tags: right-sidebar, featured-images, full-width-template, microdata
 Text Domain: 
 */
 .margin-bottom-25{margin-bottom:25px;}
