--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: right-sidebar, featured-images, full-width-template, microdata
 Text Domain: 
 */
-.margin-bottom-25{margin-bottom:25px;}
-.margin-bottom-10{margin-bottom: 10px;}
+.margin-bottom-25{margin-bottom:25px;}.margin-bottom-10{margin-bottom: 10px;}
 .margin-top-25{margin-top:25px;}
 .comment-edit-link, .comment-reply-link, .btn-primary a{color: #FFFFFF !important;}
 .bg-color-author{background-color: #f2f2f2;}
