Correct license url and add custom.css

--- a/style.css
+++ b/style.css
@@ -4,117 +4,10 @@ Theme URI: http://www.overclokk.net/italystrap-wordpress-starter-theme
 Author: Enea Overclokk
 Author URI: http://www.overclokk.net
 Template: ItalyStrap
-Description: Wordpess starter theme with twitter bootstrap, HTML5 boilerplate and Schema.org
-Version: 1.5.1
+Description: Wordpess starter theme with twitter bootstrap, HTML5 boilerplate and Schema.org <a href="https://github.com/overclokk/ItalyStrap/graphs/contributors">Contribute on GitHub</a>
+Version: 1.5.2
 License: MIT License (MIT)
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+License URI: http://opensource.org/licenses/MIT
 Tags: right-sidebar, featured-images, full-width-template, microdata
 Text Domain: 
 */
-.margin-bottom-25{margin-bottom:25px;}.margin-bottom-10{margin-bottom: 10px;}.margin-top-25{margin-top:25px;}.padding-15{padding: 15px;}.margin-dx-0{margin-right:0;}
-.comment-edit-link, .comment-reply-link, .btn-primary a{color: #FFFFFF !important;}
-.bg-color-author{background-color: #f2f2f2;}
-figure{margin: 0px !important;padding: 0px !important;}
-body {padding-bottom: 40px;color: #5a5a5a;}
-/* CSS SPRITE ICONE SOCIALI*/
-.sprite{background:url(img/css_sprite_social_icon.jpg) no-repeat !important;display: block;height:64px;width:64px;}.twitter{background-position:0 0 !important}.facebook{background-position:-64px 0 !important}.googleplus{background-position: -128px 0 !important}.skype{background-position: -192px 0 !important}.googlepage{background-position: -256px 0 !important}.linkedin{background-position: -320px 0 !important}.pinterest{background-position: -384px 0 !important}.widget ul{list-style: none outside none;padding-left: 0;}
-.form-actions:before, .form-actions:after {
-    content: "";
-    display: table;
-    line-height: 0;
-}
-.form-actions:after {
-    clear: both;
-}
-.form-actions:before, .form-actions:after {
-    content: "";
-    display: table;
-    line-height: 0;
-}
-.form-actions {
-    background-color: #F5F5F5;
-    border-top: 1px solid #E5E5E5;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    padding: 19px 20px 20px;
-}
-.breadcrumb > li + li:before {
-    content:""!important;
-	padding: 0;
-}
-/* CUSTOMIZE THE NAVBAR */
-/* Special class on .container surrounding .navbar, used for positioning it into place. */
-.navbar-wrapper {
-position: relative;
-top: 0;
-left: 0;
-right: 0;
-z-index: 10;
-margin-top: 20px;
-/*  margin-bottom: -90px; */ /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
-}
-.navbar-wrapper .navbar {
-}
-/* Remove border and change up box shadow for more contrast */
-.navbar {
-border: 0;
--webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
--moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-}
-/* Downsize the brand/project name a bit */
-.navbar .navbar-brand {
-padding: 14px 20px 16px; /* Increase vertical padding to match navbar links */
-font-size: 16px;
-font-weight: bold;
-text-shadow: 0 -1px 0 rgba(0,0,0,.5);
-}
-/* Navbar links: increase padding for taller navbar */
-.navbar-nav > li > a {
-padding: 15px 20px;
-} 
-/* Offset the responsive button for proper vertical alignment */
-.navbar .btn-navbar {
- margin-top: 10px;
-}
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-/* Carousel base class */
-.carousel {
-  margin-bottom: 40px;
-  /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
- /*  margin-top: -90px; */
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-}
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
-  background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
-}
-/* RESPONSIVE CSS */
-@media (min-width: 768px) {
-  /* Navbar positioning foo */
-  .navbar-wrapper {
-    margin-top: 20px;
-  }
-  /* The navbar becomes detached from the top, so we round the corners */
-  .navbar-wrapper .navbar {
-    border-radius: 4px;
-  }
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
-  }
-}
