--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ Theme URI: http://www.overclokk.net/italystrap-wordpress-starter-theme
 Author: Enea Overclokk
 Author URI: http://www.overclokk.net
 Description: Wordpess starter theme with twitter bootstrap, HTML5 boilerplate and Schema.org <a href="https://github.com/overclokk/ItalyStrap/graphs/contributors">Contribute on GitHub</a>
-Version: 1.6.1
+Version: 1.6.2
 License: MIT License (MIT)
 License URI: http://opensource.org/licenses/MIT
 Tags: right-sidebar, featured-images, full-width-template, microdata
 Text Domain: 
+GitHub Theme URI: https://github.com/overclokk/italystrap
 */
