--- a/style.css
+++ b/style.css
@@ -9,5 +9,6 @@ License: MIT License (MIT)
 License URI: http://opensource.org/licenses/MIT
 Tags: right-sidebar, featured-images, full-width-template, microdata
 Text Domain: 
-GitHub Theme URI: https://github.com/overclokk/italystrap
+GitHub Theme URI: https://github.com/overclokk/ItalyStrap
+GitHub Branch:     master
 */
