--- a/css/src/sass/_fix.scss
+++ b/css/src/sass/_fix.scss
@@ -1,7 +1,7 @@
-figure{
-  margin: 0 !important;
-  padding: 0 !important;
-}
+// figure{
+//   margin: 0 !important;
+//   padding: 0 !important;
+// }
 .widget ul{
   list-style: none outside none;
   padding-left: 0;
