--- a/css/src/sass/_gallery.scss
+++ b/css/src/sass/_gallery.scss
@@ -1,4 +1,4 @@
-.gallery img{
-	margin-top: 15px;
-	margin-bottom: 15px;
-}
+// .gallery img{
+// 	margin-top: 15px;
+// 	margin-bottom: 15px;
+// }
