Fix overflow issue in Hx

--- a/css/src/sass/_fix.scss
+++ b/css/src/sass/_fix.scss
@@ -13,3 +13,9 @@
 .comment-edit-link, .comment-reply-link, .btn-primary a{
   color: #FFFFFF !important;
 }
+
+// Fix Title overflow content area
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+	-ms-word-wrap: break-word;
+	word-wrap: break-word;	
+}
