--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
-/*
-Theme Name: ItalyStrap
-Theme URI: http://www.overclokk.net/italystrap-wordpress-starter-theme
-Author: Enea Overclokk
-Author URI: http://www.overclokk.net
-Description: Wordpess starter theme with twitter bootstrap, HTML5 boilerplate and Schema.org <a href="https://github.com/overclokk/ItalyStrap/graphs/contributors">Contribute on GitHub</a>
-Version: 2.0.0
-License: MIT License (MIT)
-License URI: http://opensource.org/licenses/MIT
-Tags: right-sidebar, featured-images, full-width-template, microdata
-Text Domain: 
-GitHub Theme URI: https://github.com/overclokk/ItalyStrap
-GitHub Branch:     master
-*/
+/**
+ * Theme Name: ItalyStrap
+ * Theme URI: http://www.overclokk.net/italystrap-wordpress-starter-theme
+ * Author: Enea Overclokk
+ * Author URI: http://www.overclokk.net
+ * Description: Wordpess starter theme with twitter bootstrap, HTML5 boilerplate and Schema.org <a href="https://github.com/overclokk/ItalyStrap/graphs/contributors">Contribute on GitHub</a>
+ * Version: 2.0.0
+ * License: GPLv2 or later
+ * License URI: http://www.gnu.org/licenses/gpl-2.0.html
+ * Tags: right-sidebar, featured-images, full-width-template, microdata
+ * Text Domain: ItalyStrap
+ * GitHub Theme URI: https://github.com/overclokk/ItalyStrap
+ * GitHub Branch:     master
+ */
 
-/*
+/**
  * Class for Figure tag and figure caption tag
  */
 .wp-caption{}
