--- a/css/admin.css
+++ b/css/admin.css
@@ -1,13 +1,1 @@
-/**
- * Css for admin panel
- */
-body.wp-autoresize{
-	padding: 15px !important;
-}
-.wpview-wrap{
-	background-color: #eaeaea;
-}
-.wpview-wrap .toolbar div{
-	margin: 3px;
-	padding: 0;
-}
+body.wp-autoresize{padding:15px !important}.wpview-wrap{background-color:#eaeaea;padding:0 10px}.wpview-wrap .toolbar div{margin:3px;padding:0}
