--- a/css/src/sass/_wordpressCss.scss
+++ b/css/src/sass/_wordpressCss.scss
@@ -27,3 +27,16 @@
 .mejs-container {
     margin-bottom: 25px;
 }
+
+/**
+ * Class for Figure tag and figure caption tag
+ */
+.wp-caption{}
+.wp-caption-text{}
+
+.sticky{}
+.gallery-caption{}
+.bypostauthor{}
+.alignright{}
+.alignleft{}
+.aligncenter{}
