Changed from starter to framework

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  * Theme URI: http://www.overclokk.net/italystrap-wordpress-starter-theme
  * Author: Enea Overclokk
  * Author URI: http://www.overclokk.net
- * Description: Wordpess starter theme with twitter bootstrap, HTML5 boilerplate and Schema.org <a href="https://github.com/overclokk/ItalyStrap/graphs/contributors">Contribute on GitHub</a>
+ * Description: Theme Framework for WordPress with twitter Bootstrap, HTML5 boilerplate and Schema.org <a href="https://github.com/overclokk/ItalyStrap/graphs/contributors">Contribute on GitHub</a>
  * Version: 3.0.5
  * License: GPLv2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
