--- a/css/src/home.css
+++ b/css/src/home.css
@@ -6862,6 +6862,30 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, a, p, li {
 }
 
 /* New class to hide content with max-width: 480px*/
+/* line 8, ../../sass/global/_new-class.scss */
+.boxed {
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 768px) {
+  /* line 8, ../../sass/global/_new-class.scss */
+  .boxed {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  /* line 8, ../../sass/global/_new-class.scss */
+  .boxed {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  /* line 8, ../../sass/global/_new-class.scss */
+  .boxed {
+    width: 1170px;
+  }
+}
+
 /* line 11, ../../sass/global/_wordpressCss.scss */
 .alignright {
   float: right !important;
@@ -7017,23 +7041,29 @@ a img.aligncenter {
 /**
  * Snippet example:
  */
-/* line 5, ../../sass/header/_menu.scss */
+/**
+ * Fix for dropdown menu with multilevel
+ * @link http://bootsnipp.com/snippets/featured/multi-level-dropdown-menu-bs3
+ *
+ * Da finire di testare
+ */
+/* line 11, ../../sass/header/_menu.scss */
 .dropdown-submenu {
   position: relative;
 }
-/* line 8, ../../sass/header/_menu.scss */
+/* line 14, ../../sass/header/_menu.scss */
 .dropdown-submenu:hover > .dropdown-menu {
   display: block;
 }
-/* line 11, ../../sass/header/_menu.scss */
+/* line 17, ../../sass/header/_menu.scss */
 .dropdown-submenu:hover > a:after {
   border-left-color: #fff;
 }
-/* line 15, ../../sass/header/_menu.scss */
+/* line 21, ../../sass/header/_menu.scss */
 .dropdown-submenu.pull-left {
   float: none;
 }
-/* line 17, ../../sass/header/_menu.scss */
+/* line 23, ../../sass/header/_menu.scss */
 .dropdown-submenu.pull-left > .dropdown-menu {
   left: -100%;
   margin-left: 10px;
@@ -7041,7 +7071,7 @@ a img.aligncenter {
   -moz-border-radius: 6px 0 6px 6px;
   border-radius: 6px 0 6px 6px;
 }
-/* line 26, ../../sass/header/_menu.scss */
+/* line 32, ../../sass/header/_menu.scss */
 .dropdown-submenu > .dropdown-menu {
   top: 0;
   left: 100%;
@@ -7051,7 +7081,7 @@ a img.aligncenter {
   -moz-border-radius: 0 6px 6px;
   border-radius: 0 6px 6px 6px;
 }
-/* line 36, ../../sass/header/_menu.scss */
+/* line 42, ../../sass/header/_menu.scss */
 .dropdown-submenu > a:after {
   display: block;
   content: " ";
