--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
  * License: GPLv2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  * Tags: right-sidebar, featured-images, full-width-template, microdata
- * Text Domain: ItalyStrap
+ * Text Domain: italystrap
+ * Requires at least: 4.4
+ * Tested up to: 4.7
  * GitHub Theme URI: https://github.com/overclokk/ItalyStrap
  * GitHub Branch:     master
  */
