--- a/css/src/custom.css
+++ b/css/src/custom.css
@@ -3609,22 +3609,44 @@ input[type="search"] {
     line-height: 36px;
   }
   /* line 197, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_forms.scss */
-  input[type="date"].input-sm, .input-group-sm input[type="date"],
-  input[type="time"].input-sm, .input-group-sm
+  input[type="date"].input-sm, .input-group-sm > input[type="date"].form-control,
+  .input-group-sm > input[type="date"].input-group-addon,
+  .input-group-sm > .input-group-btn > input[type="date"].btn, .input-group-sm input[type="date"],
+  input[type="time"].input-sm,
+  .input-group-sm > input[type="time"].form-control,
+  .input-group-sm > input[type="time"].input-group-addon,
+  .input-group-sm > .input-group-btn > input[type="time"].btn, .input-group-sm
   input[type="time"],
-  input[type="datetime-local"].input-sm, .input-group-sm
+  input[type="datetime-local"].input-sm,
+  .input-group-sm > input[type="datetime-local"].form-control,
+  .input-group-sm > input[type="datetime-local"].input-group-addon,
+  .input-group-sm > .input-group-btn > input[type="datetime-local"].btn, .input-group-sm
   input[type="datetime-local"],
-  input[type="month"].input-sm, .input-group-sm
+  input[type="month"].input-sm,
+  .input-group-sm > input[type="month"].form-control,
+  .input-group-sm > input[type="month"].input-group-addon,
+  .input-group-sm > .input-group-btn > input[type="month"].btn, .input-group-sm
   input[type="month"] {
     line-height: 33px;
   }
   /* line 202, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_forms.scss */
-  input[type="date"].input-lg, .input-group-lg input[type="date"],
-  input[type="time"].input-lg, .input-group-lg
+  input[type="date"].input-lg, .input-group-lg > input[type="date"].form-control,
+  .input-group-lg > input[type="date"].input-group-addon,
+  .input-group-lg > .input-group-btn > input[type="date"].btn, .input-group-lg input[type="date"],
+  input[type="time"].input-lg,
+  .input-group-lg > input[type="time"].form-control,
+  .input-group-lg > input[type="time"].input-group-addon,
+  .input-group-lg > .input-group-btn > input[type="time"].btn, .input-group-lg
   input[type="time"],
-  input[type="datetime-local"].input-lg, .input-group-lg
+  input[type="datetime-local"].input-lg,
+  .input-group-lg > input[type="datetime-local"].form-control,
+  .input-group-lg > input[type="datetime-local"].input-group-addon,
+  .input-group-lg > .input-group-btn > input[type="datetime-local"].btn, .input-group-lg
   input[type="datetime-local"],
-  input[type="month"].input-lg, .input-group-lg
+  input[type="month"].input-lg,
+  .input-group-lg > input[type="month"].form-control,
+  .input-group-lg > input[type="month"].input-group-addon,
+  .input-group-lg > .input-group-btn > input[type="month"].btn, .input-group-lg
   input[type="month"] {
     line-height: 49px;
   }
@@ -3717,13 +3739,19 @@ input[type="checkbox"] {
   min-height: 38px;
 }
 /* line 315, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_forms.scss */
-.form-control-static.input-lg, .form-control-static.input-sm {
+.form-control-static.input-lg, .input-group-lg > .form-control-static.form-control,
+.input-group-lg > .form-control-static.input-group-addon,
+.input-group-lg > .input-group-btn > .form-control-static.btn, .form-control-static.input-sm, .input-group-sm > .form-control-static.form-control,
+.input-group-sm > .form-control-static.input-group-addon,
+.input-group-sm > .input-group-btn > .form-control-static.btn {
   padding-left: 0;
   padding-right: 0;
 }
 
 /* line 71, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_forms.scss */
-.input-sm {
+.input-sm, .input-group-sm > .form-control,
+.input-group-sm > .input-group-addon,
+.input-group-sm > .input-group-btn > .btn {
   height: 33px;
   padding: 5px 10px;
   font-size: 14px;
@@ -3732,14 +3760,21 @@ input[type="checkbox"] {
 }
 
 /* line 79, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_forms.scss */
-select.input-sm {
+select.input-sm, .input-group-sm > select.form-control,
+.input-group-sm > select.input-group-addon,
+.input-group-sm > .input-group-btn > select.btn {
   height: 33px;
   line-height: 33px;
 }
 
 /* line 84, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_forms.scss */
-textarea.input-sm,
-select[multiple].input-sm {
+textarea.input-sm, .input-group-sm > textarea.form-control,
+.input-group-sm > textarea.input-group-addon,
+.input-group-sm > .input-group-btn > textarea.btn,
+select[multiple].input-sm,
+.input-group-sm > select[multiple].form-control,
+.input-group-sm > select[multiple].input-group-addon,
+.input-group-sm > .input-group-btn > select[multiple].btn {
   height: auto;
 }
 
@@ -3771,7 +3806,9 @@ select[multiple].input-sm {
 }
 
 /* line 71, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_forms.scss */
-.input-lg {
+.input-lg, .input-group-lg > .form-control,
+.input-group-lg > .input-group-addon,
+.input-group-lg > .input-group-btn > .btn {
   height: 49px;
   padding: 10px 16px;
   font-size: 20px;
@@ -3780,14 +3817,21 @@ select[multiple].input-sm {
 }
 
 /* line 79, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_forms.scss */
-select.input-lg {
+select.input-lg, .input-group-lg > select.form-control,
+.input-group-lg > select.input-group-addon,
+.input-group-lg > .input-group-btn > select.btn {
   height: 49px;
   line-height: 49px;
 }
 
 /* line 84, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_forms.scss */
-textarea.input-lg,
-select[multiple].input-lg {
+textarea.input-lg, .input-group-lg > textarea.form-control,
+.input-group-lg > textarea.input-group-addon,
+.input-group-lg > .input-group-btn > textarea.btn,
+select[multiple].input-lg,
+.input-group-lg > select[multiple].form-control,
+.input-group-lg > select[multiple].input-group-addon,
+.input-group-lg > .input-group-btn > select[multiple].btn {
   height: auto;
 }
 
@@ -3842,7 +3886,9 @@ select[multiple].input-lg {
 }
 
 /* line 410, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_forms.scss */
-.input-lg + .form-control-feedback,
+.input-lg + .form-control-feedback, .input-group-lg > .form-control + .form-control-feedback,
+.input-group-lg > .input-group-addon + .form-control-feedback,
+.input-group-lg > .input-group-btn > .btn + .form-control-feedback,
 .input-group-lg + .form-control-feedback,
 .form-group-lg .form-control + .form-control-feedback {
   width: 49px;
@@ -3851,7 +3897,9 @@ select[multiple].input-lg {
 }
 
 /* line 417, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_forms.scss */
-.input-sm + .form-control-feedback,
+.input-sm + .form-control-feedback, .input-group-sm > .form-control + .form-control-feedback,
+.input-group-sm > .input-group-addon + .form-control-feedback,
+.input-group-sm > .input-group-btn > .btn + .form-control-feedback,
 .input-group-sm + .form-control-feedback,
 .form-group-sm .form-control + .form-control-feedback {
   width: 33px;
@@ -4697,6 +4745,150 @@ tbody.collapse.in {
     right: auto;
   }
 }
+/* line 7, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group {
+  position: relative;
+  display: table;
+  border-collapse: separate;
+}
+/* line 13, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group[class*="col-"] {
+  float: none;
+  padding-left: 0;
+  padding-right: 0;
+}
+/* line 19, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group .form-control {
+  position: relative;
+  z-index: 2;
+  float: left;
+  width: 100%;
+  margin-bottom: 0;
+}
+/* line 33, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group .form-control:focus {
+  z-index: 3;
+}
+
+/* line 58, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-addon,
+.input-group-btn,
+.input-group .form-control {
+  display: table-cell;
+}
+/* line 63, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-addon:not(:first-child):not(:last-child),
+.input-group-btn:not(:first-child):not(:last-child),
+.input-group .form-control:not(:first-child):not(:last-child) {
+  border-radius: 0;
+}
+
+/* line 68, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-addon,
+.input-group-btn {
+  width: 1%;
+  white-space: nowrap;
+  vertical-align: middle;
+}
+
+/* line 77, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-addon {
+  padding: 6px 12px;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 1;
+  color: #555555;
+  text-align: center;
+  background-color: #eeeeee;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+/* line 89, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-addon.input-sm,
+.input-group-sm > .input-group-addon,
+.input-group-sm > .input-group-btn > .input-group-addon.btn {
+  padding: 5px 10px;
+  font-size: 14px;
+  border-radius: 3px;
+}
+/* line 94, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-addon.input-lg,
+.input-group-lg > .input-group-addon,
+.input-group-lg > .input-group-btn > .input-group-addon.btn {
+  padding: 10px 16px;
+  font-size: 20px;
+  border-radius: 6px;
+}
+/* line 101, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-addon input[type="radio"],
+.input-group-addon input[type="checkbox"] {
+  margin-top: 0;
+}
+
+/* line 108, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group .form-control:first-child,
+.input-group-addon:first-child,
+.input-group-btn:first-child > .btn,
+.input-group-btn:first-child > .btn-group > .btn,
+.input-group-btn:first-child > .dropdown-toggle,
+.input-group-btn:last-child > .btn:not(:last-child):not(.dropdown-toggle),
+.input-group-btn:last-child > .btn-group:not(:last-child) > .btn {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+
+/* line 117, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-addon:first-child {
+  border-right: 0;
+}
+
+/* line 120, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group .form-control:last-child,
+.input-group-addon:last-child,
+.input-group-btn:last-child > .btn,
+.input-group-btn:last-child > .btn-group > .btn,
+.input-group-btn:last-child > .dropdown-toggle,
+.input-group-btn:first-child > .btn:not(:first-child),
+.input-group-btn:first-child > .btn-group:not(:first-child) > .btn {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+
+/* line 129, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-addon:last-child {
+  border-left: 0;
+}
+
+/* line 135, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-btn {
+  position: relative;
+  font-size: 0;
+  white-space: nowrap;
+}
+/* line 144, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-btn > .btn {
+  position: relative;
+}
+/* line 146, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-btn > .btn + .btn {
+  margin-left: -1px;
+}
+/* line 150, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-btn > .btn:hover, .input-group-btn > .btn:focus, .input-group-btn > .btn:active {
+  z-index: 2;
+}
+/* line 159, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-btn:first-child > .btn,
+.input-group-btn:first-child > .btn-group {
+  margin-right: -1px;
+}
+/* line 165, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_input-groups.scss */
+.input-group-btn:last-child > .btn,
+.input-group-btn:last-child > .btn-group {
+  z-index: 2;
+  margin-left: -1px;
+}
+
 /* line 9, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_navs.scss */
 .nav {
   margin-bottom: 0;
