--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /**
  * Theme Name: ItalyStrap
- * Theme URI: http://www.overclokk.net/italystrap-wordpress-starter-theme
+ * Theme URI: http://italystrap.com
  * Author: Enea Overclokk
  * Author URI: http://www.overclokk.net
  * Description: Theme Framework for WordPress with twitter Bootstrap, HTML5 boilerplate and Schema.org <a href="https://github.com/overclokk/ItalyStrap/graphs/contributors">Contribute on GitHub</a>
@@ -9,9 +9,9 @@
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  * Tags: right-sidebar, featured-images, full-width-template, microdata
  * Text Domain: italystrap
- * Requires at least: 4.4
- * Tested up to: 4.7
- * GitHub Theme URI: https://github.com/overclokk/ItalyStrap
+ * Requires at least: 4.6
+ * Tested up to: 4.8
+ * GitHub Theme URI: https://github.com/overclokk/italystrap
  * GitHub Branch:     master
  */
 
