--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
  */
 
 /**
- * This file is only for Theme versioning, it doesn't loaded, for your custom CSS use:
+ * This file is only for Theme versioning, do not use it, for your custom CSS use:
  * 		home.css		[loaded with is_home and is_front_page]
  * 		singular.css	[loaded with is_singular]
  * 		archive.css		[loaded with is_archive]
@@ -25,16 +25,3 @@
  *
  * For customize your theme use this child: https://github.com/overclokk/ItalyStrap-child
  */
-
-/**
- * Class for Figure tag and figure caption tag
- */
-.wp-caption{}
-.wp-caption-text{}
-
-.sticky{}
-.gallery-caption{}
-.bypostauthor{}
-.alignright{}
-.alignleft{}
-.aligncenter{}
