--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
  * Version: 4.0.0-beta.4
  * License: GPLv2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
- * Tags: right-sidebar, featured-images, full-width-template, microdata
+ * Tags: right-sidebar, featured-images, full-width-template
  * Text Domain: italystrap
  * Requires at least: 4.6
  * Tested up to: 4.8
@@ -25,3 +25,6 @@
  *
  * For customize your theme use this child: https://github.com/overclokk/ItalyStrap-child
  */
+
+.sticky {}
+.bypostauthor {}
